IOptions and IOptionsSnapshot

--- a/FirstWebApp/appsettings.Development.json
+++ b/FirstWebApp/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "courseName": "asp.net core - from dev file"
+
 }
