--- a/FirstWebApp/appsettings.json
+++ b/FirstWebApp/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "HeaderToRemove": {
+    "Enabled": false,
+    "HeaderKeys": [
+      "header1",
+      "headerWow",
+      "header3"
+    ]
+  },
+  "AllowedHosts": "*",
+  "courseName": "asp.net core"
 }
