Read config values from controller

--- a/FirstWebApp/appsettings.json
+++ b/FirstWebApp/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "HeaderToRemove": {
-    "Enabled": false,
+    "Enabled": true,
     "HeaderKeys": [
-      "header1",
-      "headerWow",
-      "header3"
+      "WOW",
+      "WOW2",
+      "WOW3"
     ]
   },
   "AllowedHosts": "*",
