Ef and Sql server

--- a/FirstWebApp/appsettings.json
+++ b/FirstWebApp/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "courseDb": "Data Source=LAPTOP-S04BRFRK\\SQLEXPRESS;Initial Catalog=aspnet-course;Integrated Security=True;TrustServerCertificate=True"
+  },
+
   "HeaderToRemove": {
     "Enabled": false,
     "HeaderKeys": [
