Implement JWT authentication and authorization
- Updated `ProductsEndPoints.cs` to require authorization for product deletion and updates.
- Added `UserSecretsId` in `FirstWebApp.csproj` for sensitive data.
- Introduced `adminToken` in `FirstWebApp.http` for authorization in requests.
- Configured authentication and authorization policies in `Program.cs`.
- Updated `appsettings.Development.json` with JWT settings.
- Created `AuthorizationPolicies.cs` for defining authorization constants.
- Added `IAuthorizationService.cs` interface for user credential validation.
- Implemented `AuthEndPoints.cs` for handling authentication endpoints.
- Added `BearerInfo.cs` and `JwtInfo.cs` for JWT configuration.
- Created `AuthDtos.cs` for login request and response models.
- Implemented `AuthorizationService.cs` for user validation logic.

--- a/FirstWebApp/FirstWebApp.csproj
+++ b/FirstWebApp/FirstWebApp.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>bcf1fbc3-ff8d-4423-a291-1bb611ea31c5</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
