--- a/FirstWebApp/appsettings.Development.json
+++ b/FirstWebApp/appsettings.Development.json
@@ -5,6 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "courseName": "asp.net core - from dev file"
-
+  "courseName": "asp.net core - from dev file",
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:5221",
+          "https://localhost:5528",
+          "http://localhost:5223"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
+  }
 }
